--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">Hoolix</a>
+      <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="wrapper">
-          <a href="#" class="logo">Hoolix</a>
+          <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -77,7 +77,11 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="./Contact-Us.html" class="navbar-link" data-nav-link>Contact Us</a>
+          </li>
+
+          <li>
+            <a href="./Apply.html" class="navbar-link" data-nav-link> Apply Now </a>
           </li>
 
         </ul>
@@ -88,7 +92,7 @@
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
       </button>
 
-      <a href="#" class="btn-outline">Lets talk</a>
+      <a href="#" class="btn-outline"> Apply Now </a>
 
       <div class="overlay" data-nav-toggler data-overlay></div>
 
@@ -123,14 +127,15 @@
             </p>
 
             <div class="btn-group">
-              <a href="#" class="btn btn-primary">Discover More</a>
+              <a href="#" class="btn btn-primary"> Learn More </a>
 
               <button class="flex-btn">
                 <div class="btn-icon">
                   <ion-icon name="play" aria-hidden="true"></ion-icon>
                 </div>
-
-                <span class="span">How it works</span>
+                <a href="./Apply.html">
+                  <span class="span"> Apply Now </span>
+                </a>
               </button>
             </div>
 
