--- a/index.html
+++ b/index.html
@@ -57,27 +57,27 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link>Home</a>
+            <a href="#home" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link>About</a>
+            <a href="#about" class="navbar-link" data-nav-link> About Us </a>
           </li>
 
           <li>
-            <a href="#services" class="navbar-link" data-nav-link>Services</a>
+            <a href="#services" class="navbar-link" data-nav-link> Services </a>
           </li>
 
           <li>
-            <a href="#features" class="navbar-link" data-nav-link>Features</a>
+            <a href="#features" class="navbar-link" data-nav-link> Features </a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Blog</a>
+            <a href="#" class="navbar-link" data-nav-link> Courses </a>
           </li>
 
           <li>
-            <a href="./Contact-Us.html" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="./Contact-Us.html" class="navbar-link" data-nav-link> Contact Us </a>
           </li>
 
           <li>
@@ -92,7 +92,7 @@
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
       </button>
 
-      <a href="#" class="btn-outline"> Apply Now </a>
+      <a href="./Apply.html" class="btn-outline"> Apply Now </a>
 
       <div class="overlay" data-nav-toggler data-overlay></div>
 
@@ -115,9 +115,9 @@
 
           <div class="hero-content">
 
-            <p class="hero-subtitle has-before">Wellcome to Our Agency</p>
+            <p class="hero-subtitle has-before"> Welcome to Our Agency </p>
 
-            <h1 class="h1 hero-title">Smart Ideas for your Brand are Here</h1>
+            <h1 class="h1 hero-title"> Wensi Recruitment Agency </h1>
 
             <p class="hero-text">
               Donec tincidunt lacinia diam, eu volutpat est sollicitudin at. Vestibulum ut mi tristi que, vulputate ante
@@ -155,7 +155,6 @@
       <!-- 
         - #ABOUT
       -->
-
       <section class="section about" id="about" aria-label="about">
         <div class="container">
 
@@ -166,7 +165,7 @@
 
           <div class="about-content">
 
-            <h2 class="h2-sm section-title">We create some things, Design for your success future.</h2>
+            <h2 class="h2-sm section-title"> About Us </h2>
 
             <p class="section-text">
               Lorem Ipsum is simply dumm of free available in market the way printing and typesetting industry has been
