--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hoolix - Smart Ideas for your Brand are Here</title>
+  <title> Wensi Recruitment Agency | Home </title>
 
   <!-- 
     - favicon
@@ -647,7 +647,6 @@
   <!-- 
     - #FOOTER
   -->
-
   <footer class="footer">
 
     <div class="footer-top section">
@@ -655,7 +654,7 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">Hoolix</a>
+          <a href="./index.html" class="logo">W ensi Recruitment Agency </a>
 
           <p class="footer-text">
             Lorem ipsum dolor sit amet consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
@@ -800,17 +799,17 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Hoolix | All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+          &copy; 2023 Wensi Recruitment Agency | All Rights Reserved by <a href="./index.html" class="copyright-link"> Wensi Recruitment Agency </a>
         </p>
 
         <ul class="footer-bottom-list">
 
           <li>
-            <a href="#" class="footer-bottom-link">Privacy Policy</a>
+            <a href="./Privacy-Policy.html" class="footer-bottom-link"> Privacy Policy </a>
           </li>
 
           <li>
-            <a href="#" class="footer-bottom-link">Terms of Use</a>
+            <a href="./Terms-Of-Use.html" class="footer-bottom-link"> Terms of Use </a>
           </li>
 
         </ul>
