--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hoolix - Smart Ideas for your Brand are Here</title>
+  <title> Wensi Recruitment Agency | Home </title>
 
   <!-- 
     - favicon
@@ -57,27 +57,27 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link>Home</a>
+            <a href="#home" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link>About</a>
+            <a href="#about" class="navbar-link" data-nav-link> About Us </a>
           </li>
 
           <li>
-            <a href="#services" class="navbar-link" data-nav-link>Services</a>
+            <a href="#services" class="navbar-link" data-nav-link> Services </a>
           </li>
 
           <li>
-            <a href="#features" class="navbar-link" data-nav-link>Features</a>
+            <a href="#features" class="navbar-link" data-nav-link> Features </a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Blog</a>
+            <a href="#" class="navbar-link" data-nav-link> Courses </a>
           </li>
 
           <li>
-            <a href="./Contact-Us.html" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="./Contact-Us.html" class="navbar-link" data-nav-link> Contact Us </a>
           </li>
 
           <li>
@@ -92,7 +92,7 @@
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
       </button>
 
-      <a href="#" class="btn-outline"> Apply Now </a>
+      <a href="./Apply.html" class="btn-outline"> Apply Now </a>
 
       <div class="overlay" data-nav-toggler data-overlay></div>
 
@@ -115,9 +115,9 @@
 
           <div class="hero-content">
 
-            <p class="hero-subtitle has-before">Wellcome to Our Agency</p>
+            <p class="hero-subtitle has-before"> Welcome to Our Agency </p>
 
-            <h1 class="h1 hero-title">Smart Ideas for your Brand are Here</h1>
+            <h1 class="h1 hero-title"> Wensi Recruitment Agency </h1>
 
             <p class="hero-text">
               Donec tincidunt lacinia diam, eu volutpat est sollicitudin at. Vestibulum ut mi tristi que, vulputate ante
@@ -155,7 +155,6 @@
       <!-- 
         - #ABOUT
       -->
-
       <section class="section about" id="about" aria-label="about">
         <div class="container">
 
@@ -166,7 +165,7 @@
 
           <div class="about-content">
 
-            <h2 class="h2-sm section-title">We create some things, Design for your success future.</h2>
+            <h2 class="h2-sm section-title"> About Us </h2>
 
             <p class="section-text">
               Lorem Ipsum is simply dumm of free available in market the way printing and typesetting industry has been
@@ -648,7 +647,6 @@
   <!-- 
     - #FOOTER
   -->
-
   <footer class="footer">
 
     <div class="footer-top section">
@@ -656,7 +654,7 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">Hoolix</a>
+          <a href="./index.html" class="logo">W ensi Recruitment Agency </a>
 
           <p class="footer-text">
             Lorem ipsum dolor sit amet consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
@@ -801,17 +799,17 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Hoolix | All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+          &copy; 2023 Wensi Recruitment Agency | All Rights Reserved by <a href="./index.html" class="copyright-link"> Wensi Recruitment Agency </a>
         </p>
 
         <ul class="footer-bottom-list">
 
           <li>
-            <a href="#" class="footer-bottom-link">Privacy Policy</a>
+            <a href="./Privacy-Policy.html" class="footer-bottom-link"> Privacy Policy </a>
           </li>
 
           <li>
-            <a href="#" class="footer-bottom-link">Terms of Use</a>
+            <a href="./Terms-Of-Use.html" class="footer-bottom-link"> Terms of Use </a>
           </li>
 
         </ul>
