--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link> Home </a>
+            <a href="./index.html" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
@@ -73,7 +73,7 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link> Courses </a>
+            <a href="#courses" class="navbar-link" data-nav-link> Courses </a>
           </li>
 
           <li>
@@ -120,18 +120,16 @@
             <h1 class="h1 hero-title"> Wensi Recruitment Agency </h1>
 
             <p class="hero-text">
-              Donec tincidunt lacinia diam, eu volutpat est sollicitudin at. Vestibulum ut mi tristi que, vulputate ante
-              quis, tempus
-              enim. Proin quis euismod purus. Suspen disse efficitur
-              aliquam enim sed consequat vulputate ante quis.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque exercitationem quo adipisci doloremque
+              doloribus repellat sit iusto facilis obcaecati non in asperiores sequi veniam, aliquam molestiae cumque consectetur assumenda?
             </p>
 
             <div class="btn-group">
-              <a href="#" class="btn btn-primary"> Learn More </a>
+              <a href="#about" class="btn btn-primary"> Learn More </a>
 
               <button class="flex-btn">
                 <div class="btn-icon">
-                  <ion-icon name="play" aria-hidden="true"></ion-icon>
+                  <ion-icon name="mail-open-outline" aria-hidden="true"></ion-icon>
                 </div>
                 <a href="./Apply.html">
                   <span class="span"> Apply Now </span>
@@ -168,52 +166,145 @@
             <h2 class="h2-sm section-title"> About Us </h2>
 
             <p class="section-text">
-              Lorem Ipsum is simply dumm of free available in market the way printing and typesetting industry has been
-              the industrys
-              standard dummy text ever.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto velit numquam similique pariatur voluptate
+              magnam voluptates in nisi, ad eum ipsam quisquam cumque ex corrupti rerum accusamus facilis voluptas voluptatum maxime.
+              A sapiente ipsa deleniti non laudantium? Voluptate, dolores sequi!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Cum nostrum molestiae maiores fugiat aut accusamus nisi ipsam nulla aspernatur quidem.
             </p>
 
             <ul class="about-list">
 
               <li class="has-before">
-                Price of additional materials or parts (if needed)
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum?
               </li>
 
               <li class="has-before">
-                Transportation cost for carrying new materials/parts
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum?
               </li>
 
               <li class="has-before">
-                You will get 100% money back offer.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum?
               </li>
 
             </ul>
-
-            <div class="btn-group">
-              <a href="#" class="btn btn-primary">Know More</a>
-
-              <button class="flex-btn">
-                <div class="btn-icon">
-                  <ion-icon name="medal-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <span class="span">10+ Years Experience</span>
-              </button>
-            </div>
 
           </div>
 
         </div>
       </section>
 
+      <!-- 
+        - #WHY CHOOSE US
+      -->
+      <section class="section features" id="why-choose-us" aria-label="why-choose-us">
+        <div class="container">
 
+          <p class="section-subtitle text-center">-Why Choose Us-</p>
+
+          <h2 class="h2 section-title text-center">Reasons to Choose Us</h2>
+
+          <p class="section-text text-center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea distinctio illo accusamus beatae sapiente.
+            Cum consectetur in, voluptates natus, quos reiciendis eaque possimus ipsa vitae, eos at minus dolorem a!
+          </p>
+
+          <ul class="grid-list">
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="01">01</data>
+
+                <h3 class="h3 card-title">Free Icon Plugin</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="02">02</data>
+
+                <h3 class="h3 card-title">Free 6 Month Support</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="03">03</data>
+
+                <h3 class="h3 card-title">Customer Strategy</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="04">04</data>
+
+                <h3 class="h3 card-title">Best Premimum Image</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="05">05</data>
+
+                <h3 class="h3 card-title">Most Advanced Features</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="06">06</data>
+
+                <h3 class="h3 card-title">Very Reasonable Price</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+          </ul>
+
+        </div>
+      </section>
 
 
 
       <!-- 
         - #SERVICE
       -->
-
       <section class="section service" id="services" aria-label="service">
         <div class="container">
 
@@ -222,8 +313,7 @@
           <h2 class="h2 section-title text-center">Our Creative Services</h2>
 
           <p class="section-text text-center">
-            Get the most of reduction in your team’s operating costs for the whole product which creates amazing UI/UX
-            experiences.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus deserunt distinctio corporis adipisci nihil in facere libero eum quidem magnam!
           </p>
 
           <ul class="grid-list">
@@ -354,13 +444,120 @@
       <!-- 
         - #FEATURES
       -->
-
       <section class="section features" id="features" aria-label="features">
         <div class="container">
 
-          <p class="section-subtitle text-center">-Why Choose Us-</p>
+          <p class="section-subtitle text-center">-Our Features-</p>
 
           <h2 class="h2 section-title text-center">Reasons to Choose Us</h2>
+
+          <p class="section-text text-center">
+            Get the most of reduction in your team’s operating costs for the whole product which creates amazing UI/UX
+            experiences.
+          </p>
+
+          <ul class="grid-list">
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="01">01</data>
+
+                <h3 class="h3 card-title">Free Icon Plugin</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="02">02</data>
+
+                <h3 class="h3 card-title">Free 6 Month Support</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="03">03</data>
+
+                <h3 class="h3 card-title">Customer Strategy</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="04">04</data>
+
+                <h3 class="h3 card-title">Best Premimum Image</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="05">05</data>
+
+                <h3 class="h3 card-title">Most Advanced Features</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <data class="card-number" value="06">06</data>
+
+                <h3 class="h3 card-title">Very Reasonable Price</h3>
+
+                <p class="card-text">
+                  Nullam ullamcorper condimentum urna eu accumsan.
+                </p>
+
+              </div>
+            </li>
+
+          </ul>
+
+        </div>
+      </section>
+
+
+
+      <!-- 
+        - #COURSES
+      -->
+      <section class="section features" id="courses" aria-label="courses">
+        <div class="container">
+
+          <p class="section-subtitle text-center">-Courses-</p>
+
+          <h2 class="h2 section-title text-center"> -A Look at Available Courses-</h2>
 
           <p class="section-text text-center">
             Get the most of reduction in your team’s operating costs for the whole product which creates amazing UI/UX
@@ -465,14 +662,13 @@
       <!-- 
         - #FAQ
       -->
-
-      <section class="section faq" aria-label="frequently asked questions">
+      <section class="section faq" name="faq" aria-label="frequently asked questions">
         <div class="container">
 
           <div class="title-wrapper">
-            <h2 class="h2 section-title">Discover Frequently Asked Questions?</h2>
+            <h2 class="h2 section-title">Do You Have More Questions?</h2>
 
-            <a href="#" class="btn btn-primary">Work Together</a>
+            <a href="./Contact-Us.html" class="btn btn-primary"> Contact Us </a>
           </div>
 
           <ul class="grid-list">
@@ -654,7 +850,7 @@
 
         <div class="footer-brand">
 
-          <a href="./index.html" class="logo">W ensi Recruitment Agency </a>
+          <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
 
           <p class="footer-text">
             Lorem ipsum dolor sit amet consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
@@ -710,22 +906,6 @@
 
           <li>
             <a href="#" class="footer-link">About Company</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Our Services</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Our Portfolio</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Our Blog</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Latest News</a>
           </li>
 
           <li>
