--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
   <!-- 
     - #HEADER
   -->
-
   <header class="header" data-header>
     <div class="container">
 
@@ -100,16 +99,12 @@
   </header>
 
 
-
-
-
   <main>
     <article>
 
       <!-- 
         - #HERO
       -->
-
       <section class="section hero" id="home" aria-label="hero">
         <div class="container">
 
@@ -147,9 +142,6 @@
       </section>
 
 
-
-
-
       <!-- 
         - #ABOUT
       -->
@@ -176,7 +168,7 @@
             <ul class="about-list">
 
               <li class="has-before">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum?
+                Work Hours (Available date/time Mon - Fri 09:00hrs - 16:00hrs, Sat 09:00hrs - 13:00hrs, Sun Closed)
               </li>
 
               <li class="has-before">
@@ -216,10 +208,10 @@
 
                 <data class="card-number" value="01">01</data>
 
-                <h3 class="h3 card-title">Free Icon Plugin</h3>
+                <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                 <p class="card-text">
-                  Nullam ullamcorper condimentum urna eu accumsan.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, eos.
                 </p>
 
               </div>
@@ -230,10 +222,10 @@
 
                 <data class="card-number" value="02">02</data>
 
-                <h3 class="h3 card-title">Free 6 Month Support</h3>
+                <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                 <p class="card-text">
-                  Nullam ullamcorper condimentum urna eu accumsan.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, eos.
                 </p>
 
               </div>
@@ -244,7 +236,7 @@
 
                 <data class="card-number" value="03">03</data>
 
-                <h3 class="h3 card-title">Customer Strategy</h3>
+                <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -258,7 +250,7 @@
 
                 <data class="card-number" value="04">04</data>
 
-                <h3 class="h3 card-title">Best Premimum Image</h3>
+                <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -272,7 +264,7 @@
 
                 <data class="card-number" value="05">05</data>
 
-                <h3 class="h3 card-title">Most Advanced Features</h3>
+                <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -286,7 +278,7 @@
 
                 <data class="card-number" value="06">06</data>
 
-                <h3 class="h3 card-title">Very Reasonable Price</h3>
+                <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -323,23 +315,17 @@
 
                 <figure class="card-icon">
                   <img src="./assets/images/service-1.png" width="140" height="140" loading="lazy"
-                    alt="UI/UX Creative Design" class="img">
+                    alt="" class="img">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">UI/UX Creative Design</h3>
+                  <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                   <p class="card-text">
                     Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
                     adipiscing elit.
                   </p>
-
-                  <a href="#" class="btn-link">
-                    <span class="span">Read More</span>
-
-                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                  </a>
 
                 </div>
 
@@ -350,24 +336,18 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/service-2.png" width="140" height="140" loading="lazy" alt="App Development"
+                  <img src="./assets/images/service-2.png" width="140" height="140" loading="lazy" alt=""
                     class="img">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">App Development</h3>
+                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                   <p class="card-text">
                     Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
                     adipiscing elit.
                   </p>
-
-                  <a href="#" class="btn-link">
-                    <span class="span">Read More</span>
-
-                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                  </a>
 
                 </div>
 
@@ -379,23 +359,17 @@
 
                 <figure class="card-icon">
                   <img src="./assets/images/service-3.png" width="140" height="140" loading="lazy"
-                    alt="Professional Content Writer" class="img">
+                    alt="" class="img">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Professional Content Writer</h3>
+                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                   <p class="card-text">
                     Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
                     adipiscing elit.
                   </p>
-
-                  <a href="#" class="btn-link">
-                    <span class="span">Read More</span>
-
-                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                  </a>
 
                 </div>
 
@@ -406,24 +380,18 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt="Graphic Design"
+                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
                     class="img">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Graphic Design</h3>
+                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
 
                   <p class="card-text">
                     Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
                     adipiscing elit.
                   </p>
-
-                  <a href="#" class="btn-link">
-                    <span class="span">Read More</span>
-
-                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                  </a>
 
                 </div>
 
@@ -432,12 +400,10 @@
 
           </ul>
 
-          <a href="#" class="btn btn-primary">Get Started</a>
+          <a href="./Apply.html" class="btn btn-primary"> Apply Now </a>
 
         </div>
       </section>
-
-
 
 
 
@@ -452,8 +418,7 @@
           <h2 class="h2 section-title text-center">Reasons to Choose Us</h2>
 
           <p class="section-text text-center">
-            Get the most of reduction in your team’s operating costs for the whole product which creates amazing UI/UX
-            experiences.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi asperiores ex dicta aspernatur quis!
           </p>
 
           <ul class="grid-list">
@@ -463,7 +428,7 @@
 
                 <data class="card-number" value="01">01</data>
 
-                <h3 class="h3 card-title">Free Icon Plugin</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -477,7 +442,7 @@
 
                 <data class="card-number" value="02">02</data>
 
-                <h3 class="h3 card-title">Free 6 Month Support</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -491,7 +456,7 @@
 
                 <data class="card-number" value="03">03</data>
 
-                <h3 class="h3 card-title">Customer Strategy</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -505,7 +470,7 @@
 
                 <data class="card-number" value="04">04</data>
 
-                <h3 class="h3 card-title">Best Premimum Image</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -519,7 +484,7 @@
 
                 <data class="card-number" value="05">05</data>
 
-                <h3 class="h3 card-title">Most Advanced Features</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -533,7 +498,7 @@
 
                 <data class="card-number" value="06">06</data>
 
-                <h3 class="h3 card-title">Very Reasonable Price</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -560,8 +525,8 @@
           <h2 class="h2 section-title text-center"> -A Look at Available Courses-</h2>
 
           <p class="section-text text-center">
-            Get the most of reduction in your team’s operating costs for the whole product which creates amazing UI/UX
-            experiences.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem magni vero officia facere, earum facilis incidunt,
+            nam corrupti temporibus rem veniam delectus soluta provident assumenda! Sed nihil quasi repellendus distinctio?
           </p>
 
           <ul class="grid-list">
@@ -571,7 +536,7 @@
 
                 <data class="card-number" value="01">01</data>
 
-                <h3 class="h3 card-title">Free Icon Plugin</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -585,7 +550,7 @@
 
                 <data class="card-number" value="02">02</data>
 
-                <h3 class="h3 card-title">Free 6 Month Support</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -599,7 +564,7 @@
 
                 <data class="card-number" value="03">03</data>
 
-                <h3 class="h3 card-title">Customer Strategy</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -613,7 +578,7 @@
 
                 <data class="card-number" value="04">04</data>
 
-                <h3 class="h3 card-title">Best Premimum Image</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -627,7 +592,7 @@
 
                 <data class="card-number" value="05">05</data>
 
-                <h3 class="h3 card-title">Most Advanced Features</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -641,7 +606,7 @@
 
                 <data class="card-number" value="06">06</data>
 
-                <h3 class="h3 card-title">Very Reasonable Price</h3>
+                <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
 
                 <p class="card-text">
                   Nullam ullamcorper condimentum urna eu accumsan.
@@ -654,8 +619,6 @@
 
         </div>
       </section>
-
-
 
 
 
@@ -678,7 +641,7 @@
 
                 <button class="card-action" data-accordion-action>
                   <h3 class="h3 card-title">
-                    01. Curious about how to build your own UX strategy? Here are five simple steps.
+                    01. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nisi explicabo facere doloribus ducimus molestiae earum est quasi eum atque.
                   </h3>
 
                   <div class="action-icon">
@@ -709,7 +672,7 @@
 
                 <button class="card-action" data-accordion-action>
                   <h3 class="h3 card-title">
-                    02. Where Could a Career in UX Take You? Agency vs. In-House vs. Freelance?
+                    02. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, fuga. Animi qui libero praesentium?
                   </h3>
 
                   <div class="action-icon">
@@ -740,7 +703,7 @@
 
                 <button class="card-action" data-accordion-action>
                   <h3 class="h3 card-title">
-                    03. What Is a Problem Statement in UX? (And How To Write One?
+                    03. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, fuga. Animi qui libero praesentium?
                   </h3>
 
                   <div class="action-icon">
@@ -771,7 +734,7 @@
 
                 <button class="card-action" data-accordion-action>
                   <h3 class="h3 card-title">
-                    04. There are several techniques UX designers employ to arrive at a succinct?
+                    04. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, fuga. Animi qui libero praesentium?
                   </h3>
 
                   <div class="action-icon">
@@ -802,7 +765,7 @@
 
                 <button class="card-action" data-accordion-action>
                   <h3 class="h3 card-title">
-                    05. What are the obstacles users are facing? What are they trying to do?
+                    05. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, fuga. Animi qui libero praesentium?
                   </h3>
 
                   <div class="action-icon">
@@ -835,8 +798,6 @@
 
     </article>
   </main>
-
-
 
 
 
@@ -873,27 +834,15 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Strategy & Research</a>
+            <a href="#" class="footer-link"> Lorem ipsum dolor sit amet. </a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Web Development</a>
+            <a href="#" class="footer-link">Lorem ipsum dolor sit amet.</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Web Solution</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Digital Merketing</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">App Design</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">App Development</a>
+            <a href="#" class="footer-link">Lorem ipsum dolor sit amet.</a>
           </li>
 
         </ul>
@@ -905,11 +854,11 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">About Company</a>
+            <a href="#about" class="footer-link">About Company</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Contact Us</a>
+            <a href="./Contact-Us.html" class="footer-link">Contact Us</a>
           </li>
 
         </ul>
@@ -924,20 +873,20 @@
             <ion-icon name="location" aria-hidden="true"></ion-icon>
 
             <address class="contact-link address">
-              4517 Washington Ave. Manchester, Kentucky 39495
+              1st Floor, Room 1, Corner of Chilumbulu/Nationalist Rd, Opposite SDA Church Libala, Lusaka.
             </address>
           </li>
 
           <li class="footer-item">
             <ion-icon name="call" aria-hidden="true"></ion-icon>
 
-            <a href="tel:+7894631546876" class="contact-link">+7894631546876</a>
+            <a href="tel:+260968818002" class="contact-link">+260 968 818 002/ +260 950 416 580</a>
           </li>
 
           <li class="footer-item">
             <ion-icon name="mail" aria-hidden="true"></ion-icon>
 
-            <a href="mailto:info@hoolix.com" class="contact-link">info@hoolix.com</a>
+            <a href="mailto:admission.wensi@gmail.com" class="contact-link">admission.wensi@gmail.com</a>
           </li>
 
           <li class="footer-item">
@@ -998,9 +947,6 @@
     </div>
 
   </footer>
-
-
-
 
 
   <!-- 
