--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -143,46 +143,23 @@
 
 
       <!-- 
-        - #ABOUT
+        - #CONTACT
       -->
-      <section class="section about" id="about" aria-label="about">
-        <div class="container">
-
-          <figure class="about-banner">
-            <img src="./assets/images/about-banner.png" width="802" height="654" loading="lazy" alt="about banner"
-              class="w-100">
-          </figure>
-
-          <div class="about-content">
-
-            <h2 class="h2-sm section-title"> About Us </h2>
-
-            <p class="section-text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto velit numquam similique pariatur voluptate
-              magnam voluptates in nisi, ad eum ipsam quisquam cumque ex corrupti rerum accusamus facilis voluptas voluptatum maxime.
-              A sapiente ipsa deleniti non laudantium? Voluptate, dolores sequi!
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Cum nostrum molestiae maiores fugiat aut accusamus nisi ipsam nulla aspernatur quidem.
-            </p>
-
-            <ul class="about-list">
-
-              <li class="has-before">
-                Work Hours (Available date/time Mon - Fri 09:00hrs - 16:00hrs, Sat 09:00hrs - 13:00hrs, Sun Closed)
-              </li>
-
-              <li class="has-before">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum?
-              </li>
-
-              <li class="has-before">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum?
-              </li>
-
-            </ul>
-
+      <section>
+        <div class="contact-container">
+          <div class="contact-box">
+            <div class="left"></div>
+            <div class="right">
+              <h2>Contact Us</h2>
+              <form  action="" method="POST">
+                <input name="Name" type="text" class="field" placeholder="Your Name">
+                <input name="Email Address" type="email" class="field" placeholder="Your Email">
+                <input name="Phone Number" type="text" class="field" placeholder="Your Phone">
+                <textarea name="Message" class="field area" placeholder="Message"></textarea>
+                <button type="submit" class="btn">Send</button>
+              </form>
+            </div>
           </div>
-
         </div>
       </section>
 
