--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -152,6 +152,21 @@
             <div class="right">
               <h2>Contact Us</h2>
               <form  action="" method="POST">
+                <div class="field">
+                  <label> Reason for Contact </label>
+                  <div class="field" name="Reason for Contact" type="text">
+                    <select name="Title" type="text">
+                      <option name="Title" type="text" value="">Select</option>
+                      <option name="Title" type="text" value="Ms"> Ms </option>
+                      <option name="Title" type="text" value="Miss"> Miss </option>
+                      <option name="Title" type="text" value="Mrs"> Mrs </option>
+                      <option name="Title" type="text" value="Mr"> Mr </option>
+                      <option name="Title" type="text" value="Dr"> Dr </option>
+                      <option name="Title" type="text" value="Prof"> Prof </option>
+                      <option name="Title" type="text" value="Rev"> Rev </option>
+                    </select>
+                  </div>
+               </div>
                 <input name="Name" type="text" class="field" placeholder="Your Name">
                 <input name="Email Address" type="email" class="field" placeholder="Your Email">
                 <input name="Phone Number" type="text" class="field" placeholder="Your Phone">
