--- a/Apply.html
+++ b/Apply.html
@@ -115,15 +115,6 @@
 
             <h1 class="h1 hero-title"> You Are A Few Steps Away </h1>
 
-            <p class="hero-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque exercitationem quo adipisci doloremque
-              doloribus repellat sit iusto facilis obcaecati non in asperiores sequi veniam, aliquam molestiae cumque consectetur assumenda?
-            </p>
-
-            <div class="btn-group">
-              <a href="#Apply" class="btn btn-primary"> Apply Now </a>
-            </div>
-
           </div>
 
           <figure class="hero-banner has-before img-holder" style="--width: 650; --height: 650;">
@@ -206,13 +197,7 @@
                      </div>
 
                      <div class="inputfield">
-                      <label>College/University of interest:</label>
-                      <div class="custom_select" name="College/University of interest:" type="text">
-                        <select name="College/University of interest:" type="text" required>
-                          <option name="College/University of interest:" type="text" value="">Select</option>
-                          <option name="College/University of interest:" type="text" value="Option 1"> Option 1 </option>
-                        </select>
-                      </div>
+                      <input type="text" class="input" name="College of interest:" placeholder="College of interest:" required>
                     </div>
 
                     <div class="inputfield">
@@ -282,15 +267,41 @@
                       <input type="text" class="input" name="Maximum Budget" placeholder="Maximum Budget" required>
                   </div>
 
+                    
+                    <label> Upload of Documents: </label>
                     <div class="inputfield">
-                      <input type="text" class="input" name="Upload of Document:" placeholder="Upload of Document:" required>
-                  </div>
+                      <label> G12 Results </label>
+                      <input type="file" class="input" name="G12 Results" placeholder="G12 Results">
+                    </div>
+
+                    <div class="inputfield">
+                      <label> ID </label>
+                      <input type="file" class="input" name="ID" placeholder="ID">
+                    </div>
+
+                    <div class="inputfield">
+                      <label> Certificate, Diploma, Degree </label>
+                      <input type="file" class="input" name="Certificate, Diploma, Degree" placeholder="Certificate, Diploma, Degree">
+                    </div>
+
+                    <div class="inputfield">
+                      <label> Transcript </label>
+                      <input type="file" class="input" name="Transcript" placeholder="Transcript">
+                    </div>
+
+                    <div class="inputfield">
+                      <label> Curriculum Vitae </label>
+                      <input type="file" class="input" name="Curriculum Vitae" placeholder="Curriculum Vitae">
+                    </div>
+
                         
                     <div class="inputfield">
-                      <button class="login-btn" type="submit">
-                          <img src="../assets/images/booking.svg" width="21" height="21" alt="user icon">
-                            <span class="span"> Submit </span>
-                      </button> 
+                      <button class="flex-btn" class="login-btn" type="submit">
+                        <div class="btn-icon">
+                          <ion-icon name="mail-open-outline" aria-hidden="true"></ion-icon>
+                          <span class="span"> Apply Now </span>
+                        </div>
+                      </button>
                     </div>
                     <p>This form is protected by reCAPTCHA and the Google <a href="./privacypolicy.html"> Privacy Policy </a> and <a href="./tandc.html">Terms of Service</a> apply.</p>
                   </div>
@@ -319,14 +330,6 @@
           <p class="footer-text">
             Lorem ipsum dolor sit amet consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
           </p>
-
-          <form action="" class="newsletter-form">
-            <input type="email" name="email_address" placeholder="Enter your email" required class="email-field">
-
-            <button type="submit" class="form-btn">
-              <ion-icon name="paper-plane" aria-hidden="true"></ion-icon>
-            </button>
-          </form>
 
         </div>
 
