--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./favicon.png" type="image/png">
 
   <!-- 
     - custom css link
@@ -120,8 +120,6 @@
             </p>
 
             <div class="btn-group">
-              <a href="#about" class="btn btn-primary"> Learn More </a>
-
               <button class="flex-btn">
                 <div class="btn-icon">
                   <ion-icon name="mail-open-outline" aria-hidden="true"></ion-icon>
@@ -293,7 +291,6 @@
       </section>
 
 
-
       <!-- 
         - #SERVICE
       -->
@@ -406,7 +403,6 @@
       </section>
 
 
-
       <!-- 
         - #FEATURES
       -->
@@ -511,7 +507,6 @@
 
         </div>
       </section>
-
 
 
       <!-- 
@@ -619,7 +614,6 @@
 
         </div>
       </section>
-
 
 
       <!-- 
@@ -816,14 +810,6 @@
           <p class="footer-text">
             Lorem ipsum dolor sit amet consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
           </p>
-
-          <form action="" class="newsletter-form">
-            <input type="email" name="email_address" placeholder="Enter your email" required class="email-field">
-
-            <button type="submit" class="form-btn">
-              <ion-icon name="paper-plane" aria-hidden="true"></ion-icon>
-            </button>
-          </form>
 
         </div>
 
