--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@
               we make the journey to international education smoother and more attainable. Trust us to unlock a world of opportunities and shape your future through quality education.
             </p>
 
+            <ul class="about-list">
+              <h2 class="h2-sm section-title"> VISION </h2>
+
+              <li class="has-before">
+                To be the number one recruitment agency by devoting ourselves to customer satisfaction
+              </li>
+            </ul>
+
             <!-- <ul class="about-list">
 
               <li class="has-before">
@@ -178,6 +186,48 @@
             </ul> -->
 
           </div>
+
+          <ul class="about-list">
+            <h2 class="h2-sm section-title"> MISSION </h2>
+
+            <li class="has-before">
+              We deliver what we promise on a personal level listening to individual needs and providing a choice of solutions.
+            </li>
+
+            <li class="has-before">
+              We create a tailored, transparent recruitment experience.
+            </li>
+
+            <li class="has-before">
+              We deliver what we promise building trust with our clients.
+            </li>
+
+          </ul>
+          
+          <ul class="about-list">
+            <h2 class="h2-sm section-title"> CORE VALUES </h2>
+
+            <li class="has-before">
+              Honesty and Integrity
+            </li>
+
+            <li class="has-before">
+              Availablility
+            </li>
+
+            <li class="has-before">
+              Transparency and Accountability
+            </li>
+
+            <li class="has-before">
+              Clarity
+            </li>
+
+            <li class="has-before">
+              Encourage open exchange of ideas and views related to business
+            </li>
+
+          </ul>
 
         </div>
       </section>
@@ -333,9 +383,9 @@
       <section class="section service" id="services" aria-label="service">
         <div class="container">
 
-          <p class="section-subtitle text-center">-What We Offer-</p>
+          <p class="section-subtitle text-center">-Courses Offerd-</p>
 
-          <h2 class="h2 section-title text-center">Our Creative Services</h2>
+          <h2 class="h2 section-title text-center"> Courses </h2>
 
           <p class="section-text text-center">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus deserunt distinctio corporis adipisci nihil in facere libero eum quidem magnam!
@@ -729,7 +779,7 @@
 
         <div class="footer-brand">
 
-          <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
+          <a href="#home" class="logo"> Wensi Recruitment Agency </a>
 
           <p class="footer-text">
             Wensi Recruitment Agency is your reliable partner in accessing global education and scholarships.
@@ -784,6 +834,18 @@
 
             <address class="contact-link address">
               1st Floor, Room 1, Corner of Chilumbulu/Nationalist Rd, Opposite SDA Church Libala, Lusaka.
+            </address>
+          </li>
+
+          <li class="footer-item">
+            <ion-icon name="location" aria-hidden="true"></ion-icon>
+
+            <address class="contact-link address">
+              Work Hours <br>
+              Available date/time <br>
+              Mon - Fri 09:00hrs - 16:00hrs <br>
+              Sat 09:00hrs - 13:00hrs <br>
+              Sun Closed
             </address>
           </li>
 
