Header and Footer Links

--- a/index.html
+++ b/index.html
@@ -798,11 +798,19 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Lorem ipsum dolor sit amet.</a>
+            <a href="#about" class="footer-link"> About Us </a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Lorem ipsum dolor sit amet.</a>
+            <a href="#features" class="footer-link"> Features </a>
+          </li>
+
+          <li>
+            <a href="./Courses.html" class="footer-link"> Courses </a>
+          </li>
+
+          <li>
+            <a href="#faq" class="footer-link"> FAQ </a>
           </li>
 
         </ul>
@@ -838,7 +846,7 @@
           </li>
 
           <li class="footer-item">
-            <ion-icon name="location" aria-hidden="true"></ion-icon>
+            <ion-icon name="alarm-outline" aria-hidden="true"></ion-icon>
 
             <address class="contact-link address">
               Work Hours <br>
@@ -865,14 +873,14 @@
             <ul class="social-list">
 
               <li>
-                <a href="#" class="social-link">
+                <a href="https://www.facebook.com/profile.php?id=100057788944329&mibextid=ZbWKwL" class="social-link">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-email"></ion-icon>
+                <a href="mailto:admission.wensi@gmail.com" class="social-link">
+                  <ion-icon name="mail-outline"></ion-icon>
                 </a>
               </li>
 
