--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./favicon.png" type="image/png">
 
   <!-- 
     - custom css link
@@ -56,7 +56,7 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="./index.html" class="navbar-link" data-nav-link> Home </a>
+            <a href="#home" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
@@ -64,15 +64,15 @@
           </li>
 
           <li>
-            <a href="#services" class="navbar-link" data-nav-link> Services </a>
-          </li>
-
-          <li>
             <a href="#features" class="navbar-link" data-nav-link> Features </a>
           </li>
 
           <li>
-            <a href="#courses" class="navbar-link" data-nav-link> Courses </a>
+            <a href="./Courses.html" class="navbar-link" data-nav-link> Courses </a>
+          </li>
+
+          <li>
+            <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
           <li>
@@ -193,38 +193,38 @@
 
         <div class="footer-brand">
 
-          <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
+          <a href="#home" class="logo"> Wensi Recruitment Agency </a>
 
           <p class="footer-text">
-            Lorem ipsum dolor sit amet consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
+            Wensi Recruitment Agency is your reliable partner in accessing global education and scholarships.
           </p>
-
-          <form action="" class="newsletter-form">
-            <input type="email" name="email_address" placeholder="Enter your email" required class="email-field">
-
-            <button type="submit" class="form-btn">
-              <ion-icon name="paper-plane" aria-hidden="true"></ion-icon>
-            </button>
-          </form>
 
         </div>
 
         <ul class="footer-list">
 
           <li>
-            <p class="footer-list-title">Our Services</p>
+            <p class="footer-list-title"> Paralinks </p>
           </li>
 
           <li>
-            <a href="#" class="footer-link"> Lorem ipsum dolor sit amet. </a>
+            <a href="#home" class="footer-link"> Home </a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Lorem ipsum dolor sit amet.</a>
+            <a href="#about" class="footer-link"> About Us </a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Lorem ipsum dolor sit amet.</a>
+            <a href="#features" class="footer-link"> Features </a>
+          </li>
+
+          <li>
+            <a href="./Courses.html" class="footer-link"> Courses </a>
+          </li>
+
+          <li>
+            <a href="#faq" class="footer-link"> FAQ </a>
           </li>
 
         </ul>
@@ -236,7 +236,7 @@
           </li>
 
           <li>
-            <a href="#about" class="footer-link">About Company</a>
+            <a href="./Apply.html" class="footer-link"> Apply </a>
           </li>
 
           <li>
@@ -260,9 +260,21 @@
           </li>
 
           <li class="footer-item">
+            <ion-icon name="alarm-outline" aria-hidden="true"></ion-icon>
+
+            <address class="contact-link address">
+              Work Hours <br>
+              Available date/time <br>
+              Mon - Fri 09:00hrs - 16:00hrs <br>
+              Sat 09:00hrs - 13:00hrs <br>
+              Sun Closed
+            </address>
+          </li>
+
+          <li class="footer-item">
             <ion-icon name="call" aria-hidden="true"></ion-icon>
 
-            <a href="tel:+260968818002" class="contact-link">+260 968 818 002/ +260 950 416 580</a>
+            <a href="tel:+260968818002" class="contact-link">+260 968 818 002 / +260 950 416 580</a>
           </li>
 
           <li class="footer-item">
@@ -275,26 +287,14 @@
             <ul class="social-list">
 
               <li>
-                <a href="#" class="social-link">
+                <a href="https://www.facebook.com/profile.php?id=100057788944329&mibextid=ZbWKwL" class="social-link">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-twitter"></ion-icon>
-                </a>
-              </li>
-
-              <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-instagram"></ion-icon>
-                </a>
-              </li>
-
-              <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-pinterest"></ion-icon>
+                <a href="mailto:admission.wensi@gmail.com" class="social-link">
+                  <ion-icon name="mail-outline"></ion-icon>
                 </a>
               </li>
 
