--- a/Courses.html
+++ b/Courses.html
@@ -56,7 +56,7 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="./index.html#home" class="navbar-link" data-nav-link> Home </a>
+            <a href="#home" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
@@ -64,11 +64,15 @@
           </li>
 
           <li>
-            <a href="./index.html#features" class="navbar-link" data-nav-link> Features </a>
+            <a href="#features" class="navbar-link" data-nav-link> Features </a>
           </li>
 
           <li>
-            <a href="#courses" class="navbar-link" data-nav-link> Courses </a>
+            <a href="./Courses.html" class="navbar-link" data-nav-link> Courses </a>
+          </li>
+
+          <li>
+            <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
           <li>
@@ -223,7 +227,7 @@
 
         <div class="footer-brand">
 
-          <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
+          <a href="#home" class="logo"> Wensi Recruitment Agency </a>
 
           <p class="footer-text">
             Wensi Recruitment Agency is your reliable partner in accessing global education and scholarships.
@@ -242,11 +246,19 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Lorem ipsum dolor sit amet.</a>
+            <a href="#about" class="footer-link"> About Us </a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Lorem ipsum dolor sit amet.</a>
+            <a href="#features" class="footer-link"> Features </a>
+          </li>
+
+          <li>
+            <a href="./Courses.html" class="footer-link"> Courses </a>
+          </li>
+
+          <li>
+            <a href="#faq" class="footer-link"> FAQ </a>
           </li>
 
         </ul>
@@ -282,6 +294,18 @@
           </li>
 
           <li class="footer-item">
+            <ion-icon name="alarm-outline" aria-hidden="true"></ion-icon>
+
+            <address class="contact-link address">
+              Work Hours <br>
+              Available date/time <br>
+              Mon - Fri 09:00hrs - 16:00hrs <br>
+              Sat 09:00hrs - 13:00hrs <br>
+              Sun Closed
+            </address>
+          </li>
+
+          <li class="footer-item">
             <ion-icon name="call" aria-hidden="true"></ion-icon>
 
             <a href="tel:+260968818002" class="contact-link">+260 968 818 002 / +260 950 416 580</a>
@@ -297,14 +321,14 @@
             <ul class="social-list">
 
               <li>
-                <a href="#" class="social-link">
+                <a href="https://www.facebook.com/profile.php?id=100057788944329&mibextid=ZbWKwL" class="social-link">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-email"></ion-icon>
+                <a href="mailto:admission.wensi@gmail.com" class="social-link">
+                  <ion-icon name="mail-outline"></ion-icon>
                 </a>
               </li>
 
